fixes button spacing

--- a/muckrock/assets/scss/layout/menu/_sidebar.scss
+++ b/muckrock/assets/scss/layout/menu/_sidebar.scss
@@ -136,7 +136,7 @@ nav.sidebar {
         @include button($color-black);
         display: block;
         width: 100%;
-        margin-bottom: $vertical-rhythm/4;
+        margin-bottom: $vertical-rhythm/2;
         padding: $vertical-rhythm/4 $vertical-rhythm/2;
     }
 
